fixed eslint and Vercel configuration

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,19 +1,9 @@
 {
   "name": "chatroom-client",
-  "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
   "env": {
     "NEXT_PUBLIC_SERVER_URL": "https://chatroom-server-production.onrender.com"
   },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ]
+  "buildCommand": "next build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install"
 } 
